--- a/src/sass/_loader.scss
+++ b/src/sass/_loader.scss
@@ -3,7 +3,7 @@
 /* scss-lint:disable ColorVariable */
 .loader {
     font-size: 10px;
-    position: relative;
+    // position: relative;
     text-indent: -9999rem;
     border-top: 1.1rem solid rgba(255, 85, 0, .2);
     border-right: 1.1rem solid rgba(255, 85, 0, .2);
