--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -4,6 +4,6 @@ $app-min-width: 670px;
 $thumbnail-size: 100px;
 $pagination-height: 2.5rem;
 $pagination-border-top-width: 2px;
-$pagination-outer-height: unquote("#{$pagination-height} - #{$pagination-border-top-width}");
+$pagination-outer-height: unquote("#{$pagination-height} + #{$pagination-border-top-width}");
 $global-loader-size: 5rem;
 $player-loader-size: 4rem;
